# crypto-pqc-migration-radar

./: .gitignore  CERTIFICATE.md  CHANGELOG.md  CLOSURE_CHECKLIST.md  DEFENSIVE_USE.md  LICENSE  MVP_PLAN.md  NEXT_STEPS.md  PROJECT_STATE.md  PROJECT_STEPS.md  README.md  RELEASE_CHECKLIST.md  REPRODUCE.md  SHA256SUMS  batch_crypto_pqc_radar.py  benchmark_corpus.py  claim_boundary.md  crypto_pqc_radar.py  diff_crypto_pqc_radar.py  outputs.md  pattern_catalog.json  patterns.md  pyproject.toml  quality_gate.py  reproduce.ps1  verifier.md  verify_crypto_radar.py
.github/workflows/: ci.yml
templates/: INTERNAL_AUDIT_TEMPLATE.md  VERIFIED_MAINTAINER_NOTE_TEMPLATE.md
tests/: test_batch_crypto_pqc_radar.py  test_benchmark_corpus.py  test_cli_entrypoints.py  test_crypto_pqc_radar.py  test_diff_crypto_pqc_radar.py  test_verify_crypto_radar.py
tests/fixtures/corpus/: benchmark_labels.json  expected_corpus.json
tests/fixtures/corpus/docs_only/docs/: crypto.md
tests/fixtures/corpus/runtime_app/src/: auth.js
tests/fixtures/corpus/test_fixture/tests/fixtures/: key.pem
